--- a/articles/sql-database/sql-database-managed-instance-index.yml
+++ b/articles/sql-database/sql-database-managed-instance-index.yml
@@ -15,7 +15,7 @@ metadata:
   ms.date: 11/11/2018
   ms.author: jovanpop-msft
 abstract:
-  description: Azure SQL Database Managed Instance is a fully managed SQL Server Database Engine Instance hosted in Azure cloud. Learn how to create and use Managed Instance with our quickstarts, tutorials, and samples.
+  description: Azure SQL Database Managed Instance is a fully managed SQL Server Database Engine Instance hosted in Azure cloud. This is the best PaaS option for migrating your SQL Server database to cloud. Learn how to create and use Managed Instance with our quickstarts, tutorials, and samples.
   aside:
     image:
       alt: 
@@ -38,7 +38,7 @@ sections:
         html: <p>Find out more information about the Azure SQL Database Managed Instance service.</p>
       - title: Rich surface area
         href: /azure/sql-database/sql-database-managed-instance#sql-features-supported
-        html: <p>Managed Instance has near 100% SQL feature compatibility with the latest version of SQL Server Database Engine.</p>
+        html: <p>Near 100% SQL feature compatibility with the latest version of SQL Server Database Engine.</p>
       - title: VNet Integration
         href: /azure/sql-database/sql-database-service-tiers
         html: <p>Secure service placed in your private Azure VNet with private IP addresses.</p>
@@ -50,7 +50,7 @@ sections:
         html: <p>Migrate a fleet of database with minimal downtime using Database Migration Service.</p>
       - title: Pricing
         href: /pricing/hybrid-benefit/
-        html: <p>Save up to 40% with Azure Hybrid Benefit.</p>
+        html: <p>Save up to 40% with Azure Hybrid Benefit with your existing on-premises licences.</p>
 - title: 5-Minute Quickstarts
   items:
   - type: paragraph
@@ -74,7 +74,7 @@ sections:
       - title: Create a new Instance
         values:
           - href: /azure/sql-database/sql-database-managed-instance-get-started
-          - href: 
+          - href: https://blogs.msdn.microsoft.com/sqlserverstorageengine/2018/11/14/create-azure-sql-managed-instance-using-azure-cli/
           - href: https://blogs.msdn.microsoft.com/sqlserverstorageengine/2018/06/27/quick-start-script-create-azure-sql-managed-instance-using-powershell/
           - href: https://github.com/Azure/azure-quickstart-templates/tree/master/101-sqlmi-new-vnet
       - title: Modify the Instance
@@ -98,18 +98,19 @@ sections:
 - title: Step-by-Step tutorials and learning materials
   items:
   - type: paragraph
-    text: Learn how to create, manage, and use Managed Instance
+    text: Learn how to create, manage, and use Managed Instance.
   - type: list
     style: ordered
     items:
     - html: Learn about <a href="/azure/sql-database/sql-database-managed-instance-resource-limits">hardware characteristics and limitations</a> and <a href="/azure/sql-database/sql-database-managed-instance-transact-sql-information">SQL language limitations</a>.
-    - html: <a href="https://medium.com/azure-sqldb-managed-instance/the-ultimate-guide-for-creating-and-configuring-azure-sql-managed-instance-environment-91ff58c0be01">Configure</a> and <a href="https://docs.microsoft.com/azure/sql-database/sql-database-managed-instance-vnet-configuration#modify-an-existing-virtual-network-for-managed-instances">validate</a> VNet where the managed instance will be deployed.
+    - html: <a href="https://medium.com/azure-sqldb-managed-instance/the-ultimate-guide-for-creating-and-configuring-azure-sql-managed-instance-environment-91ff58c0be01">Configure</a> Azure VNet where the Managed Instance will be deployed.
+    - html: <a href="https://docs.microsoft.com/azure/sql-database/sql-database-managed-instance-vnet-configuration#modify-an-existing-virtual-network-for-managed-instances">Validate</a> that your existing Azure VNet can be used to deploy Managed Instances.
     - html: Connect to your instance using <a href="https://blogs.msdn.microsoft.com/sqlserverstorageengine/2018/09/21/the-easiest-way-to-create-azure-vm-that-can-access-your-azure-sql-managed-instance/">Azure Virtual Machine</a> or <a href="/azure/sql-database/sql-database-managed-instance-configure-p2s">Point-to-site connection</a>, or <a href="https://docs.microsoft.com/azure/sql-database/sql-database-managed-instance-connect-app">Applications</a>.
     - html: Verify that your database can be migrated using <a href="https://www.microsoft.com/download/details.aspx?id=53595">Data Migration Asisstant</a> or <a href="https://blogs.msdn.microsoft.com/datamigration/2018/08/06/release-database-experimentation-assistant-dea-v2-6/">Database Experimentation Assistant</a>.
-    - html: Bring your data using <a href="/azure/sql-database/sql-database-managed-instance-get-started-restore">Native restore</a> or <a href="/azure/dms/tutorial-sql-server-managed-instance-online">Data Migration Service</a>
+    - html: Bring your databases to Managed Instance using <a href="/azure/sql-database/sql-database-managed-instance-get-started-restore">Native restore</a> or <a href="/azure/dms/tutorial-sql-server-managed-instance-online">Data Migration Service</a>.
     - html: Move your SSIS packages to <a href="/azure/data-factory/tutorial-deploy-ssis-packages-azure">Azure Data Factory</a>, SSAS tabular models to <a href="https://azure.microsoft.com/resources/videos/azure-analysis-services-moving-models/">Azure Analysis Service</a>, and SSRS reports to <a href="https://docs.microsoft.com/business-applications-release-notes/april18/power-bi/service/sql-server-reporting-services-ssrs-reports-power-bi-premium">PowerBI Premium</a>.
     - html: Best practices and recommendations for <a href="https://www.youtube.com/watch?v=vO6k05Ox1iI">securing your instance</a>.
-    - html: Distribute your data using <a href="/azure/sql-database/replication-with-sql-database-managed-instance">Transactional replication</a>
+    - html: Distribute your data using <a href="/azure/sql-database/replication-with-sql-database-managed-instance">Transactional replication</a>.
 - title: Reference
   items:
   - type: list
